<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/dp_30"
        android:layout_marginTop="@dimen/dp_30"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/calling_avatar"
            android:layout_width="@dimen/dp_69"
            android:layout_height="@dimen/dp_69"
            android:contentDescription="@string/app_name" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/dp_5"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tv_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/dp_5"
                android:textColor="@color/white"
                android:textSize="@dimen/dp_18"
                tools:text="张三" />

            <TextView
                android:id="@+id/tv_time"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/dp_20"
                android:textColor="@color/white"
                android:textSize="@dimen/dp_15"
                tools:text="00:00" />

        </LinearLayout>
    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:layout_marginBottom="@dimen/dp_30"
        android:orientation="vertical">

        <TextView
            android:id="@+id/action_switch"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:drawableTop="@mipmap/avchat_switch"
            android:drawablePadding="@dimen/dp_5"
            android:text="切换到语音"
            android:textColor="@color/white"
            android:textSize="@dimen/sp_14"
            android:visibility="gone" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp_20" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/action_camera"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:drawableTop="@mipmap/common_call_camera"
                android:drawablePadding="@dimen/dp_10"
                android:gravity="center_horizontal"
                android:text="@string/im_call_camera"
                android:textColor="@color/white"
                android:textSize="@dimen/sp_14" />

            <TextView
                android:id="@+id/action_close"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:drawableTop="@mipmap/common_call_hang_up"
                android:drawablePadding="@dimen/dp_10"
                android:gravity="center_horizontal"
                android:text="@string/im_call_close"
                android:textColor="@color/white"
                android:textSize="@dimen/sp_14" />

            <TextView
                android:id="@+id/action_minimize"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:drawableTop="@mipmap/common_call_minimize"
                android:drawablePadding="@dimen/dp_10"
                android:gravity="center_horizontal"
                android:text="@string/im_call_minimize"
                android:textColor="@color/white"
                android:textSize="@dimen/sp_14" />
        </LinearLayout>

    </LinearLayout>
</FrameLayout>