<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/frame"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <FrameLayout
        android:id="@+id/calling"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <FrameLayout
            android:id="@+id/fl_call_large_preview"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="#2a2a2a" />

        <include layout="@layout/im_view_video_call_calling" />

        <com.keydom.ih_common.widget.DragLayout
            android:id="@+id/dl_call_small_preview"
            android:layout_width="@dimen/dp_99"
            android:layout_height="@dimen/dp_135"
            android:layout_gravity="end|top"
            android:layout_marginTop="@dimen/dp_30"
            android:layout_marginEnd="@dimen/dp_30" />
    </FrameLayout>

    <android.support.constraint.ConstraintLayout
        android:id="@+id/not_connected"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#2a2a2a"
        android:paddingLeft="@dimen/dp_30"
        android:paddingTop="@dimen/dp_55"
        android:paddingRight="@dimen/dp_30"
        android:paddingBottom="@dimen/dp_30">

        <ImageView
            android:id="@+id/iv_avatar"
            android:layout_width="@dimen/dp_69"
            android:layout_height="@dimen/dp_69"
            android:contentDescription="@string/app_name"
            app:layout_constraintStart_toStartOf="parent"
            tools:src="@mipmap/ic_launcher" />

        <TextView
            android:id="@+id/tv_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/dp_10"
            android:layout_marginTop="@dimen/dp_10"
            android:singleLine="true"
            android:textColor="@color/white"
            android:textSize="@dimen/dp_18"
            app:layout_constraintStart_toEndOf="@+id/iv_avatar"
            app:layout_constraintTop_toTopOf="@+id/iv_avatar"
            tools:text="张三" />

        <TextView
            android:id="@+id/tv_hint"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp_5"
            android:text="@string/im_call_come_in_hint"
            android:textColor="@color/white"
            android:textSize="@dimen/dp_15"
            app:layout_constraintStart_toStartOf="@+id/tv_title"
            app:layout_constraintTop_toBottomOf="@+id/tv_title" />

        <TextView
            android:id="@+id/avchat_switch"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginBottom="@dimen/dp_20"
            android:drawableTop="@mipmap/avchat_switch"
            android:drawablePadding="@dimen/dp_5"
            android:text="切换到语音"
            android:textColor="@color/white"
            android:textSize="@dimen/sp_14"
            android:visibility="gone"
            app:layout_constraintBottom_toTopOf="@id/tv_hang_up"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/tv_hang_up"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:drawableTop="@mipmap/common_call_hang_up"
            android:drawablePadding="@dimen/dp_10"
            android:gravity="center_horizontal"
            android:text="@string/im_call_hang_up"
            android:textColor="@color/white"
            android:textSize="@dimen/sp_14"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/tv_answer"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_goneMarginEnd="0dp" />

        <TextView
            android:id="@+id/tv_answer"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:drawableTop="@mipmap/common_call_answer"
            android:drawablePadding="@dimen/dp_10"
            android:gravity="center_horizontal"
            android:text="@string/im_call_answer"
            android:textColor="@color/white"
            android:textSize="@dimen/sp_14"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/tv_hang_up" />
    </android.support.constraint.ConstraintLayout>
</FrameLayout>